sumo/tests/dfrouter/errors/network/edge/lane/root__edge__lane__false12c/errors.dfrouter
Error: Could not parse lane shape (edge '1').
Quitting (on error).
